--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                                 <h4>Ecommerce website</h4>
                                 <p>MERN_STACK</p>
                                 <div class="portfolio-links">
-                                    <a href="https://github.com/mithunraam99/Book-Store-MERN_STACK" target="_blank"><i class="bx bx-link"></i
+                                    <a href="https://book-store-mern.herokuapp.com/" target="_blank"><i class="bx bx-link"></i
                   ></a>
                                 </div>
                             </div>
