--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Mithun raam- Portfolio</title>
+    <title>Mithun raam - Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" href="images/m.png" type="image/x-icon" />
@@ -136,7 +136,8 @@
                                 <h1 class="big big-2">ABOUT</h1>
                                 <h2 class="mb-4">About Me</h2>
                                 <p>
-                                    Energetic and passionate college student. Aiming to use my knowledge that I have acquired from my course work as well as self study and with my hard work to satisfy my internship at your organization and also willing to learn more from this internship.
+                                    An energetic, passionate, skilled in identifying problems and providing quick resolutions with good communication skills,
+and desiring to work for an organization that provides a scope to enhance my knowledge and utilize my skills.
                                 </p>
                                 <ul class="about-info mt-4 px-md-0 px-2">
                                     <li class="d-flex">
@@ -165,7 +166,7 @@
                                     <span> Projects complete</span>
                                 </p>
                                 <p>
-                                    <a href="mithun_resume.pdf" download="Mithun's Resume" class="btn btn-primary py-3 px-3" id="btnn">Download CV</a
+                                    <a href="Mithun's Resume.pdf" download="Mithun's Resume" class="btn btn-primary py-3 px-3" id="btnn">Download CV</a
                   >
                 </p>
               </div>
@@ -232,8 +233,8 @@
         <div class="row justify-content-center mt-5">
           <div class="col-md-6 text-center ftco-animate">
             <a
-              href="mithun_resume.pdf "
-              download="Mithun 's Resume"
+              href="Mithun's Resume.pdf "
+              download="Mithun's Resume"
               class="btn btn-primary py-3 px-3"
               id="btnn"
               >Download CV</a
