--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ and desiring to work for an organization that provides a scope to enhance my kno
                                         <span>Email:</span> <span>mithunmaha1999@gmail.com</span>
                                     </li>
                                     <li class="d-flex">
-                                        <span>Phone: </span> <span>+91-9080933352</span>
+                                        <span>Phone: </span> <span>+91 90809-33352</span>
                                     </li>
                                 </ul>
                             </div>
